--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
+    "react-responsive-gallery": "^3.0.3",
+    "react-router-dom": "^6.8.2",
     "redux-typescript": "^1.2.1",
     "swiper": "^9.0.5"
   },
