--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-responsive-gallery": "^3.0.3",
     "react-router-dom": "^6.8.2",
@@ -24,6 +26,7 @@
     "swiper": "^9.0.5"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
     "@types/react": "^18.0.27",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.10",
