--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "google-map-react": "^2.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,9 @@
     "react-responsive-gallery": "^3.0.3",
     "react-router-dom": "^6.8.2",
     "redux-typescript": "^1.2.1",
-    "swiper": "^9.0.5"
+    "socket.io-client": "4.4.0",
+    "swiper": "^9.0.5",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.7",
@@ -31,6 +34,7 @@
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.10",
     "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/validator": "^13.7.14",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
