--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-responsive-gallery": "^3.0.3",
     "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.1",
     "redux-typescript": "^1.2.1",
     "socket.io-client": "4.4.0",
     "swiper": "^9.0.5",
