--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-responsive-gallery": "^3.0.3",
     "react-router-dom": "^6.8.2",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
     "redux-typescript": "^1.2.1",
     "socket.io-client": "4.4.0",
@@ -35,6 +36,7 @@
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.10",
     "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-table": "^7.7.14",
     "@types/validator": "^13.7.14",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
